trunk/Archive2/db/8ac13683a9bec4/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:1: error: unknown type name 'function_start'
function_start: lock_and_wait
^
main.cpp:1:15: error: expected unqualified-id
function_start: lock_and_wait
              ^
2 errors generated.
